# web-content-extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
azure/: function_app.py  host.json  requirements.txt
azure-functions/: host.json
azure-functions/ExtractBlobTrigger/: function.json
azure-functions/ExtractHttpTrigger/: function.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  execution_guide.md  improvement_guide.md  learning-roadmap.md  structure.md
scripts/: deploy.sh  fetch_youtube_transcripts.py  fix_setup.py  run_demo.sh  setup.sh  verify_setup.py
src/: __init__.py  cli.py  logging.py  main.py  settings.py
src/api/: __init__.py  app.py
src/config/: __init__.py  config.yaml  settings.py
src/core/: __init__.py  exceptions.py  interfaces.py  models.py  service.py  value_objects.py
src/extractors/: __init__.py  content_scraper.py  link_classifier.py  output_formatter.py  web_content_extractor.py
src/functions/: __init__.py  extract_blob_trigger.py  extract_http_trigger.py
src/infrastructure/: __init__.py  cloud_storage.py  context_classifier.py  formatters.py  html_parser.py  http_client.py  link_classifier.py  local_storage.py
src/models/: __init__.py  exceptions.py  extraction_models.py
src/utils/: __init__.py  http_client.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_extraction_service.py  test_web_extractor.py
tests/unit/: test_content_scraper.py  test_core_models.py  test_enhanced_extraction.py  test_enhanced_models.py  test_enhanced_parsing.py  test_error_context.py  test_infrastructure.py  test_link_classifier.py  test_output_formatter.py  test_value_objects.py
